0032682: Draw Harness, ViewerTest - add -rotationMode and -navigationMode to vcamera